samples/_failures_safe/1761392371_9829ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69d01376.c: In function ‘main’:
./samples/SAFE/__tmp_69d01376.c:150:5: error: expected expression at end of input
  150 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_69d01376.c:150:5: error: expected declaration or statement at end of input
